--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
+    "postman-to-openapi": "^1.2.0",
     "sequelize": "^6.37.4",
     "sequelize-auto": "^0.8.8",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
