--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "polsambal123",
-    "database": "book-review-app",
+    "password": "",
+    "database": "test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
@@ -15,7 +15,7 @@
   },
   "production": {
     "username": "root",
-    "password": null,
+    "password": "",
     "database": "test",
     "host": "51.20.82.6",
     "dialect": "mysql"
